[gd_scene load_steps=19 format=3 uid="uid://bjj5hw1d1pbl"]

[ext_resource type="Script" path="res://Scripts/Gameplay/player_movement.gd" id="1_ym8ee"]
[ext_resource type="PackedScene" uid="uid://bnowe750hxon4" path="res://Scenes/Objects/oob_death.tscn" id="2_o8rcn"]
[ext_resource type="Texture2D" uid="uid://ibxa85st2i70" path="res://Sprites/Player/Skins/green_neutral.png" id="4_ks3ku"]
[ext_resource type="FontFile" uid="uid://bigcuq3b6eifj" path="res://Fonts/HomeVideo-BLG6G.ttf" id="5_rco1c"]
[ext_resource type="PackedScene" uid="uid://cub4sgnrp1jbm" path="res://Scenes/Objects/death_particles.tscn" id="7_tlm4h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7coln"]
size = Vector2(14, 11)

[sub_resource type="Animation" id="Animation_ffsn2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bgdbl"]
resource_name = "bump"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 10]
}

[sub_resource type="Animation" id="Animation_ypup7"]
resource_name = "crouch"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_l2qnc"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_rrs7r"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0]
}

[sub_resource type="Animation" id="Animation_517hi"]
resource_name = "jump_down"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_s5ijk"]
resource_name = "jump_neutral"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_brpcm"]
resource_name = "jump_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_jla5a"]
resource_name = "look_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_la5tg"]
resource_name = "run"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imd27"]
_data = {
"RESET": SubResource("Animation_ffsn2"),
"bump": SubResource("Animation_bgdbl"),
"crouch": SubResource("Animation_ypup7"),
"die": SubResource("Animation_l2qnc"),
"idle": SubResource("Animation_rrs7r"),
"jump_down": SubResource("Animation_517hi"),
"jump_neutral": SubResource("Animation_s5ijk"),
"jump_up": SubResource("Animation_brpcm"),
"look_up": SubResource("Animation_jla5a"),
"run": SubResource("Animation_la5tg")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xbynr"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("Sprite2D:flip_h")
properties/3/spawn = true
properties/3/replication_mode = 2

[node name="Player" type="CharacterBody2D"]
collision_layer = 8
input_pickable = true
script = ExtResource("1_ym8ee")
oob_death = ExtResource("2_o8rcn")
rand_skin = false

[node name="EnvironmentalCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(6, 0, 3, 8, -3, 8, -6, 0, 0, -7)

[node name="DeathParticles" parent="." instance=ExtResource("7_tlm4h")]
position = Vector2(0, -2)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_7coln")
debug_color = Color(1, 0, 0, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_imd27")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_ks3ku")
hframes = 8
vframes = 8

[node name="WalljumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="ClingTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"Effects"

[node name="LoopingAudio" type="AudioStreamPlayer2D" parent="."]
bus = &"Effects"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xbynr")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Objects/gun.tscn")
spawn_path = NodePath("..")

[node name="NameDisplay" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -16.0
offset_right = 20.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 1
theme_override_fonts/normal_font = ExtResource("5_rco1c")
theme_override_font_sizes/normal_font_size = 8
text = "PLAYER 1"
fit_content = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="WalljumpTimer" to="." method="_on_walljump_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="ClingTimer" to="." method="_on_cling_timer_timeout"]
